[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI-Scenes/RequiredCounters.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI-Scenes/AcquiredCounters.gd" type="Script" id=2]

[node name="AcquiredCounters" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="LevelTimer" parent="." index="0"]
visible = true

[node name="RequiredLabel" parent="." index="1"]
margin_top = 84.0
margin_bottom = 100.0
text = "Acquired:"

[node name="SpaceLabel" parent="." index="2"]
margin_top = 104.0
margin_bottom = 118.0

[node name="AppleTreeCounter" parent="." index="3"]
margin_top = 122.0
margin_bottom = 152.0

[node name="BlueBerryCounter" parent="." index="4"]
margin_top = 156.0
margin_bottom = 186.0

[node name="CornCounter" parent="." index="5"]
margin_top = 190.0
margin_bottom = 220.0

[node name="PurpleMushroomCounter" parent="." index="6"]
margin_top = 224.0
margin_bottom = 254.0

[node name="RaspberryCounter" parent="." index="7"]
margin_top = 258.0
margin_bottom = 288.0

[node name="RedMushroomCounter" parent="." index="8"]
margin_top = 292.0
margin_bottom = 322.0
